--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="grid-container">
   <h1 class="mat-h1">Dashboard</h1>
   <div *ngIf="!connected" class="row">
-    <div class="col-6">
+    <div class="col-xl-6">
       <mat-card>
         <mat-card-title>Konnte keine Verbindung herstellen.</mat-card-title>
         <mat-card-content>Seite neu laden wenn der Bot gestartet wurde.</mat-card-content>
