--- a/src/app/pages/command/command-overview/command-overview.component.html
+++ b/src/app/pages/command/command-overview/command-overview.component.html
@@ -1,99 +1,101 @@
 <mat-card>
-  <ng-container *ngIf="tasks && tasks.tasks.length === 0">Keine Tasks vorhanden.</ng-container>
-  <ng-container *ngIf="tasks && tasks.tasks.length > 0">
-  <div class="row">
-    <div class="col-xl-12 flex-between">
-      <span></span>
-      <button mat-icon-button matTooltip="Als Workbench Plan exportieren." (click)="exportWorkbench()">
-        <mat-icon>import_export</mat-icon>
-      </button>
+  <ng-container *ngIf="!isLoadingResults && tasks && tasks.tasks.length === 0">Keine Tasks vorhanden.</ng-container>
+  <ng-container *ngIf="isLoadingResults || (tasks && tasks.tasks.length > 0)">
+    <div class="row">
+      <div class="col-xl-12 flex-between">
+        <span></span>
+        <button mat-icon-button matTooltip="Als Workbench Plan exportieren."
+                (click)="exportWorkbench()">
+          <mat-icon>import_export</mat-icon>
+        </button>
+      </div>
     </div>
-  </div>
-  <div class="overview-container">
-    <div class="loading-shade" *ngIf="isLoadingResults">
-      <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-    </div>
-    <div class="table-container">
-      <table mat-table [dataSource]="tasks.tasks" multiTemplateDataRows>
-        <ng-container matColumnDef="from">
-          <th mat-header-cell *matHeaderCellDef> Herkunft</th>
-          <td mat-cell *matCellDef="let element">
-            <app-village-render [value]="element.from"></app-village-render>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="to">
-          <th mat-header-cell *matHeaderCellDef> Ziel</th>
-          <td mat-cell *matCellDef="let element">
-            <app-village-render [value]="element.to"></app-village-render>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="commandType">
-          <th mat-header-cell *matHeaderCellDef> Typ</th>
-          <td mat-cell *matCellDef="let element">
-            <app-unit-render *ngIf="element.commandType === 'ATTACK'" [value]="'axe'"
-                             title="Angriff">
-            </app-unit-render>
-            <app-unit-render *ngIf="element.commandType === 'SUPPORT'" [value]="'sword'"
-                             title="Unterstützung">
-            </app-unit-render>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="unit">
-          <th mat-header-cell *matHeaderCellDef> Einheit</th>
-          <td mat-cell *matCellDef="let element">
-            <app-unit-render [value]="element.unit"></app-unit-render>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="sendTime">
-          <th mat-header-cell *matHeaderCellDef> Abschickzeit</th>
-          <td mat-cell *matCellDef="let element"> {{element.sendTime}} </td>
-        </ng-container>
-        <ng-container matColumnDef="arrivalTime">
-          <th mat-header-cell *matHeaderCellDef> Ankunftszeit</th>
-          <td mat-cell *matCellDef="let element"> {{element.arrivalTime}} </td>
-        </ng-container>
-        <ng-container matColumnDef="remainingDelay">
-          <th mat-header-cell *matHeaderCellDef> Verbleibend</th>
-          <td mat-cell *matCellDef="let element">
-            <ng-container *ngIf="(element.remainingDelay * 1000)>0">
-              {{element.remainingDelay * 1000 | date:'H:mm:ss':'UTC'}}
-            </ng-container>
-            <ng-container *ngIf="(element.remainingDelay * 1000)<=0">
-              <span style="color: red">00:00:00</span>
-            </ng-container>
-          </td>
-        </ng-container>
+    <div class="overview-container">
+      <div class="loading-shade" *ngIf="isLoadingResults">
+        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+      </div>
+      <div class="table-container">
+        <table mat-table [dataSource]="tasks.tasks" multiTemplateDataRows>
+          <ng-container matColumnDef="from">
+            <th mat-header-cell *matHeaderCellDef> Herkunft</th>
+            <td mat-cell *matCellDef="let element">
+              <app-village-render [value]="element.from"></app-village-render>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="to">
+            <th mat-header-cell *matHeaderCellDef> Ziel</th>
+            <td mat-cell *matCellDef="let element">
+              <app-village-render [value]="element.to"></app-village-render>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="commandType">
+            <th mat-header-cell *matHeaderCellDef> Typ</th>
+            <td mat-cell *matCellDef="let element">
+              <app-unit-render *ngIf="element.commandType === 'ATTACK'" [value]="'axe'"
+                               title="Angriff">
+              </app-unit-render>
+              <app-unit-render *ngIf="element.commandType === 'SUPPORT'" [value]="'sword'"
+                               title="Unterstützung">
+              </app-unit-render>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="unit">
+            <th mat-header-cell *matHeaderCellDef> Einheit</th>
+            <td mat-cell *matCellDef="let element">
+              <app-unit-render [value]="element.unit"></app-unit-render>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="sendTime">
+            <th mat-header-cell *matHeaderCellDef> Abschickzeit</th>
+            <td mat-cell *matCellDef="let element"> {{element.sendTime}} </td>
+          </ng-container>
+          <ng-container matColumnDef="arrivalTime">
+            <th mat-header-cell *matHeaderCellDef> Ankunftszeit</th>
+            <td mat-cell *matCellDef="let element"> {{element.arrivalTime}} </td>
+          </ng-container>
+          <ng-container matColumnDef="remainingDelay">
+            <th mat-header-cell *matHeaderCellDef> Verbleibend</th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="(element.remainingDelay * 1000)>0">
+                {{element.remainingDelay * 1000 | hms}}
+              </ng-container>
+              <ng-container *ngIf="(element.remainingDelay * 1000)<=0">
+                <span style="color: red">00:00:00</span>
+              </ng-container>
+            </td>
+          </ng-container>
 
-        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-        <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-            <div class="example-element-detail centerflex"
-                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-              <span></span>
-              <app-units-render [value]="element.units"></app-units-render>
-              <div class="example-element-description">
-                <button (click)="editTask(element)" mat-raised-button color="primary">
-                  <mat-icon>edit</mat-icon>
-                </button>
-                <button (click)="delete(element)" mat-raised-button color="warn">
-                  <mat-icon>delete_forever</mat-icon>
-                </button>
+          <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+              <div class="example-element-detail centerflex"
+                   [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                <span></span>
+                <app-units-render [value]="element.units"></app-units-render>
+                <div class="example-element-description">
+                  <button (click)="editTask(element)" mat-raised-button color="primary">
+                    <mat-icon>edit</mat-icon>
+                  </button>
+                  <button (click)="delete(element)" mat-raised-button color="warn">
+                    <mat-icon>delete_forever</mat-icon>
+                  </button>
+                </div>
               </div>
-            </div>
-          </td>
-        </ng-container>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-            class="example-element-row"
-            [class.example-expanded-row]="element == expandedElement"
-            (click)="expandedElement = expandedElement === element ? null : element">
-        </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']"
-            class="example-detail-row"></tr>
-      </table>
+          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+          <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+              class="example-element-row"
+              [class.example-expanded-row]="element == expandedElement"
+              (click)="expandedElement = expandedElement === element ? null : element">
+          </tr>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']"
+              class="example-detail-row"></tr>
+        </table>
+      </div>
+      <mat-paginator (page)="pageUpdate($event)" [length]="tasks.count" [pageSize]="10"
+                     [pageSizeOptions]="[10, 50, 100, 250]"></mat-paginator>
     </div>
-    <mat-paginator (page)="pageUpdate($event)" [length]="tasks.count" [pageSize]="50"
-                   [pageSizeOptions]="[50, 100, 250]"></mat-paginator>
-  </div></ng-container>
+  </ng-container>
 </mat-card>
