--- a/src/app/pages/dashboard/dashboard-prestart/dashboard-prestart.component.html
+++ b/src/app/pages/dashboard/dashboard-prestart/dashboard-prestart.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-6">
+  <div class="col-xl-6">
     <mat-card>
       <p *ngIf="gameData">
         Eingeloggt als <b>{{gameData.player.name}}</b> auf <b>{{gameData.world}}</b>.
