--- a/src/app/theme/village-render/village-render.component.html
+++ b/src/app/theme/village-render/village-render.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="value">
-  <a *ngIf="link" [href]="link" (click)="$event.stopPropagation()">
+  <a *ngIf="link" [href]="link" (click)="$event.stopPropagation()" target="_blank">
     {{value.name}} ({{value.x}}|{{value.y}})<br>
   </a>
   <span *ngIf="!link">
