--- a/src/app/pages/command/command-overview/command-overview.component.html
+++ b/src/app/pages/command/command-overview/command-overview.component.html
@@ -1,13 +1,21 @@
 <mat-card>
-  <ng-container *ngIf="!isLoadingResults && tasks && tasks.tasks.length === 0">Keine Tasks vorhanden.</ng-container>
+  <ng-container *ngIf="!isLoadingResults && tasks && tasks.tasks.length === 0">Keine Tasks
+    vorhanden.
+  </ng-container>
   <ng-container *ngIf="isLoadingResults || (tasks && tasks.tasks.length > 0)">
     <div class="row">
       <div class="col-xl-12 flex-between">
         <span></span>
-        <button mat-icon-button matTooltip="Als Workbench Plan exportieren."
-                (click)="exportWorkbench()">
-          <mat-icon>import_export</mat-icon>
-        </button>
+        <span>
+          <button *ngIf="selection.hasValue()" mat-icon-button matTooltip="Ausgewählte löschen."
+                  (click)="deleteSelected()">
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button mat-icon-button matTooltip="Als Workbench Plan exportieren."
+                  (click)="exportWorkbench()">
+            <mat-icon>import_export</mat-icon>
+          </button>
+        </span>
       </div>
     </div>
     <div class="overview-container">
@@ -16,6 +24,20 @@
       </div>
       <div class="table-container">
         <table mat-table [dataSource]="tasks.tasks" multiTemplateDataRows>
+          <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef>
+              <mat-checkbox (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()">
+              </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+              <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null"
+                            [checked]="selection.isSelected(row)">
+              </mat-checkbox>
+            </td>
+          </ng-container>
           <ng-container matColumnDef="from">
             <th mat-header-cell *matHeaderCellDef> Herkunft</th>
             <td mat-cell *matCellDef="let element">
@@ -73,10 +95,15 @@
                 <span></span>
                 <app-units-render [value]="element.units"></app-units-render>
                 <div class="example-element-description">
-                  <button (click)="editTask(element)" mat-raised-button color="primary">
+                  <a [href]="placeLink(element)" target="_blank">
+                    <button mat-raised-button color="primary">
+                      <mat-icon>open_in_new</mat-icon>
+                    </button>
+                  </a>
+                  <button class="ml-2" (click)="editTask(element)" mat-raised-button color="primary">
                     <mat-icon>edit</mat-icon>
                   </button>
-                  <button (click)="delete(element)" mat-raised-button color="warn">
+                  <button class="ml-2" (click)="delete(element)" mat-raised-button color="warn">
                     <mat-icon>delete_forever</mat-icon>
                   </button>
                 </div>
