--- a/src/app/pages/command/command-schedule/command-schedule.component.html
+++ b/src/app/pages/command/command-schedule/command-schedule.component.html
@@ -1,85 +1,102 @@
 <mat-card>
   <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="submit(form.value)">
-      <div class="form-group row">
-        <div class="col">
-          <app-village-input label="Herkunft" formControlName="from" id="from"></app-village-input>
-        </div>
+    <div *ngIf="loading" class="row">
+      <div class="col-xl-12 flex-between">
+        <span></span>
+        <mat-spinner></mat-spinner>
+        <span></span>
       </div>
-      <div class="form-group row">
-        <div class="col">
-          <app-village-input label="Ziel" class="full-width" formControlName="to"
-                             id="to"></app-village-input>
-        </div>
+    </div>
+    <div *ngIf="!loading" class="row">
+      <div class="col-xl-12">
+        <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+          <div class="form-group row">
+            <div class="col">
+              <app-village-input *ngIf="!multiSource" label="Herkunft" formControlName="from"
+                                 id="from"></app-village-input>
+              <ng-container *ngIf="multiSource">
+                <h3>{{form.value.from.length}} Dörfer als Herkunft ausgewählt.</h3>
+              </ng-container>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col">
+              <app-village-input label="Ziel" class="full-width" formControlName="to"
+                                 id="to"></app-village-input>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col">
+              <mat-form-field>
+                <mat-label>Ankunft</mat-label>
+                <input matInput placeholder="Pick Date" [matDatepicker]="picker"
+                       formControlName="date">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </div>
+            <div class="col">
+              <mat-form-field>
+                <mat-label>Ankunftszeit</mat-label>
+                <input matInput maxlength="12" formControlName="time"/>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col">
+              <mat-form-field>
+                <mat-label>Langsamste Einheit</mat-label>
+                <mat-select id="unit" formControlName="unit">
+                  <mat-select-trigger>
+                    <app-unit-render [value]="form.value.unit"></app-unit-render>
+                  </mat-select-trigger>
+                  <mat-option *ngFor="let unit of units" [value]="unit">
+                    <app-unit-render [value]="unit"></app-unit-render>
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col">
+              <mat-form-field>
+                <mat-label>Einheiten</mat-label>
+                <mat-select id="template" formControlName="template">
+                  <mat-option *ngFor="let template of templates" [value]="template.id">
+                    {{template.name}}
+                  </mat-option>
+                  <mat-option value="custom">
+                    Custom
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <br>
+              <app-units-input *ngIf="form.value.template === 'custom'" class="full-width"
+                               id="units"
+                               formControlName="units"></app-units-input>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col">
+              <mat-form-field>
+                <mat-label>Befehlstyp</mat-label>
+                <mat-select id="commandType" formControlName="commandType">
+                  <mat-option value="ATTACK">Angriff</mat-option>
+                  <mat-option value="SUPPORT">Unterstützung</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col">
+              <button [disabled]="!form.valid || disabled" type="submit" mat-raised-button
+                      color="primary">
+                Hinzufügen
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
-      <div class="form-group row">
-        <div class="col">
-          <mat-form-field>
-            <mat-label>Ankunft</mat-label>
-            <input matInput placeholder="Pick Date" [matDatepicker]="picker" formControlName="date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div class="col">
-          <mat-form-field>
-            <mat-label>Ankunftszeit</mat-label>
-            <input matInput maxlength="12" formControlName="time"/>
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col">
-          <mat-form-field>
-            <mat-label>Langsamste Einheit</mat-label>
-            <mat-select id="unit" formControlName="unit">
-              <mat-select-trigger>
-                <app-unit-render [value]="form.value.unit"></app-unit-render>
-              </mat-select-trigger>
-              <mat-option *ngFor="let unit of units" [value]="unit">
-                <app-unit-render [value]="unit"></app-unit-render>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col">
-          <mat-form-field>
-            <mat-label>Einheiten</mat-label>
-            <mat-select id="template" formControlName="template">
-              <mat-option *ngFor="let template of templates" [value]="template.id">
-                {{template.name}}
-              </mat-option>
-              <mat-option value="custom">
-                Custom
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <br>
-          <app-units-input *ngIf="form.value.template === 'custom'" class="full-width" id="units"
-                           formControlName="units"></app-units-input>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col">
-          <mat-form-field>
-            <mat-label>Befehlstyp</mat-label>
-            <mat-select id="commandType" formControlName="commandType">
-              <mat-option value="ATTACK">Angriff</mat-option>
-              <mat-option value="SUPPORT">Unterstützung</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col">
-          <button [disabled]="!form.valid || disabled" type="submit" mat-raised-button
-                  color="primary">
-            Hinzufügen
-          </button>
-        </div>
-      </div>
-    </form>
+    </div>
   </mat-card-content>
 </mat-card>
