--- a/src/app/pages/planner/planner-command/planner-command.component.html
+++ b/src/app/pages/planner/planner-command/planner-command.component.html
@@ -98,7 +98,8 @@
           </mat-header-cell>
           <mat-cell *matCellDef="let element">
             <span class="mobile-label"><app-unit-render [value]="unit"></app-unit-render></span>
-            <span [class.dis]="element.units[unit]===0" [class.red]="element.units[unit]>0 && element.remaining[unit]===0"
+            <span [class.dis]="element.units[unit]===0"
+                  [class.red]="element.units[unit]>0 && element.remaining[unit]===0"
                   [routerLink]="['/command/schedule', {unit: unit, source: element.village.id, target: target.id, type: type, time: time.valueOf()}]">
               {{element.units[unit]}}
             </span>
@@ -108,7 +109,7 @@
           <mat-header-cell *matHeaderCellDef> Zeit</mat-header-cell>
           <mat-cell *matCellDef="let element">
             <span class="mobile-label">Zeit:</span>
-            {{min(element.remaining) * 1000|hms}}
+            <span [class.red-color]="min(element.remaining) < 300">{{min(element.remaining) * 1000|hms}}</span>
           </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="cols; sticky: true"></mat-header-row>
