--- a/src/app/pages/settings/discord-webhooks/discord-webhooks.component.html
+++ b/src/app/pages/settings/discord-webhooks/discord-webhooks.component.html
@@ -2,7 +2,7 @@
   <div class="col-xl-6">
     <mat-card>
       <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="submit(form.value)">
+        <form [formGroup]="form">
           <div class="form-group row">
             <label for="event" class="label col-sm-3 col-form-label">Event</label>
             <div class="col-sm-9">
@@ -55,7 +55,8 @@
           </div>
           <div class="form-group row">
             <div class="offset-sm-3 col-sm-9">
-              <button [disabled]="!form.valid" type="submit" mat-raised-button color="primary">
+              <button [disabled]="!form.valid" type="submit" mat-raised-button color="primary"
+                      (click)="submit(form.value)">
                 Hinzufügen.
               </button>
               <button *ngIf="editEntity" class="ml-2" mat-raised-button color="warn"
