--- a/src/app/pages/admin/admin-dashboard/admin-user-detail/admin-user-detail.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-user-detail/admin-user-detail.component.html
@@ -30,6 +30,7 @@
       <mat-card-actions>
         <button mat-button (click)="incrementWeek()">+1 Woche</button>
         <button mat-button (click)="incrementMonth()">+1 Monat</button>
+        <button color="warn" mat-button (click)="delete()">Löschen</button>
       </mat-card-actions>
     </mat-card>
   </div>
