--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -8,5 +8,32 @@
         <app-admin-users></app-admin-users>
       </div>
     </div>
+    <div class="row">
+      <div class="col-xl-12">
+        <mat-card class="mt-2">
+          <form [formGroup]="form">
+            <div class="row">
+              <div class="col-md">
+                <mat-form-field class="w-100">
+                  <mat-label>ID</mat-label>
+                  <input matInput formControlName="id" type="number">
+                </mat-form-field>
+              </div>
+              <div class="col-md">
+                <mat-form-field class="w-100">
+                  <mat-label>Name</mat-label>
+                  <input matInput formControlName="name">
+                </mat-form-field>
+              </div>
+              <div class="col-md">
+                <button color="primary" class="w-100" mat-raised-button (click)="addUser(form.value)">
+                  Hinzufügen.
+                </button>
+              </div>
+            </div>
+          </form>
+        </mat-card>
+      </div>
+    </div>
   </div>
 </div>
