--- a/src/app/pages/command/command-schedule/command-schedule.component.html
+++ b/src/app/pages/command/command-schedule/command-schedule.component.html
@@ -41,6 +41,16 @@
                 <input matInput maxlength="12" formControlName="time"/>
               </mat-form-field>
             </div>
+            <div class="col">
+              <mat-form-field>
+                <mat-label>Timer Logik</mat-label>
+                <mat-select [formControl]="timerForm">
+                  <mat-option *ngFor="let logic of timerLogics" [value]="logic">
+                    {{logic | titlecase}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
           </div>
           <div class="form-group row">
             <div class="col">
