--- a/src/app/pages/dashboard/dashboard-running/dashboard-running.component.html
+++ b/src/app/pages/dashboard/dashboard-running/dashboard-running.component.html
@@ -17,6 +17,10 @@
         <app-feature-toggle [on]="rausstell" title="Rausstell Manager"
                             (toggle)="rausstellToggle($event)"></app-feature-toggle>
       </div>
+      <div class="col-md-12 gap-bottom">
+        <app-feature-toggle [on]="resmover" title="Res Mover"
+                            (toggle)="resmoverToggle($event)"></app-feature-toggle>
+      </div>
     </div>
   </div>
   <div class="col-xl-9">
