--- a/src/app/pages/rausstell/rausstell-incs/rausstell-incs.component.html
+++ b/src/app/pages/rausstell/rausstell-incs/rausstell-incs.component.html
@@ -43,7 +43,7 @@
             <mat-header-cell *matHeaderCellDef>Ankunft</mat-header-cell>
             <mat-cell *matCellDef="let element">
               <span class="mobile-label">Ankunft:</span>
-              {{element.arrival}}
+              <span>{{element.arrival.display}}:<small>{{element.arrival.ms}}</small></span>
             </mat-cell>
           </ng-container>
           <ng-container matColumnDef="delete">
