fix command edit

--- a/src/app/pages/command/command-edit/command-edit.component.html
+++ b/src/app/pages/command/command-edit/command-edit.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+
   <mat-card-title>
     {{title}}
   </mat-card-title>
@@ -140,8 +140,8 @@
       <button [disabled]="!commandTypeForm.valid || disabled" type="submit" mat-raised-button
               color="primary"
               (click)="updateCommandType(commandTypeForm.value)">
-        Ziel Aktualisieren
+        Befehlstyp Aktualisieren
       </button>
     </div>
   </div>
-</mat-card>
+
