--- a/src/app/pages/command/command-overview/command-overview.component.html
+++ b/src/app/pages/command/command-overview/command-overview.component.html
@@ -73,7 +73,9 @@
           </ng-container>
           <ng-container matColumnDef="arrivalTime">
             <th mat-header-cell *matHeaderCellDef> Ankunftszeit</th>
-            <td mat-cell *matCellDef="let element"> {{element.arrivalTime.display}}<small>:{{element.arrivalTime.ms}}</small> </td>
+            <td mat-cell *matCellDef="let element">
+              {{element.arrivalTime.display}}<small>:{{element.arrivalTime.ms}}</small>
+            </td>
           </ng-container>
           <ng-container matColumnDef="remainingDelay">
             <th mat-header-cell *matHeaderCellDef> Verbleibend</th>
