--- a/src/app/pages/incs/incs-cancel-tab/incs-cancel-tab-schedule/incs-cancel-tab-schedule.component.html
+++ b/src/app/pages/incs/incs-cancel-tab/incs-cancel-tab-schedule/incs-cancel-tab-schedule.component.html
@@ -36,7 +36,8 @@
     </div>
     <div class="form-group row">
       <div class="col">
-        <app-units-input class="full-width" formControlName="troops"></app-units-input>
+        <app-units-input [hideCataTarget]="true" class="full-width"
+                         formControlName="troops"></app-units-input>
       </div>
     </div>
     <div class="form-group row">
