--- a/src/app/pages/farm/farm-task-edit/farm-task-edit.component.html
+++ b/src/app/pages/farm/farm-task-edit/farm-task-edit.component.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </div>
-  <div *ngIf="data.villages.length > 0" class="col-xl-6">
+  <div *ngIf="data.villages.length > 0" class="col-xl-6 list">
     <table mat-table [dataSource]="data.villages" class="w-100">
       <ng-container matColumnDef="village">
         <th mat-header-cell *matHeaderCellDef>Dorf</th>
